.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfinstmt6__c.object
<CustomObject>
    <description>glfinstmt6__c</description>
    <fields>
        <fullName>rstkf__glfinstmt6_glfinstmt1__c</fullName>
        <label>Financial Statement Data - Top Level</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipName>glfinstmt6s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt6_text__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Fatal Errors</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Report Fatal Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>